<?xml version="1.0"?>
<package>
	<name>humanoid_league_gazebo_world</name>
	<version>1.0.0</version>
	<description>Models and world file for RoboCup Humanoid League field representation in Gazebo.
		         Author of the files is team Nimbro. Original package can be found at: https://github.com/AIS-Bonn/humanoid_op_ros</description>

    <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>
	<license>BSD-3</license>

	<buildtool_depend>catkin</buildtool_depend>
	<export>
	</export>
</package>