<?xml version="1.0"?>
<package>
	<name>humanoid_league_gazebo_world</name>
	<version>1.0.0</version>
	<description>Models and world file for RoboCup Humanoid League field representation in Gazebo.
		         Author of the files is team Nimbro. Original package can be found at: https://github.com/AIS-Bonn/humanoid_op_ros</description>

    <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>
	<license>BSD-3</license>

	<buildtool_depend>catkin</buildtool_depend>
	<run_depend>gazebo_ros</run_depend>
	<export>
		<!-- gazebo_ros_paths_plugin automatically adds these to
        GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
        the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    	<gazebo_ros gazebo_model_path="${prefix}/models/" />
	</export>
</package>