<?xml version="1.0"?>
<package>
  <name>humanoid_league_image_marker</name>
  <version>1.0.0</version>
  <description>Draws recognized objects on image which should afterwards be displayd with rqt.</description>

  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>humanoid_league_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>humanoid_league_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <export>

  </export>
</package>