<?xml version="1.0"?>
<package format="2">
  <name>humanoid_league_interactive_marker</name>
  <version>2.0.1</version>
  <description>The humanoid_league_interactive_marker package. This package provides interactive marker in RViz for RoboCup objects (ball, goal, obstacles).</description>

  <maintainer email="5guelden@informatik.uni-hamburg.de">Jasper Güldenstein</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>

  <author email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</author>
  <author email="5guelden@informatik.uni-hamburg.de">Jasper Güldenstein</author>

  <license>MIT</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <bitbots_documentation>
      <status>unknown</status>
      <language>python3</language>
    </bitbots_documentation>
    <build_type>ament_python</build_type>
  </export>
</package>
