<package>
  <name>humanoid_league_relative_rqt</name>
  <version>1.0.0</version>
  <description>A Python GUI plugin to visualize relative positions of objects in a radar like interface. Made for usage of humanoid_league_msgs. See README for more information.</description>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>

  <license>BSD</license>

  <author>Marc Bestmann</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>humanoid_league_msgs</build_depend>
  <run_depend version_gte="0.2.19">python_qt_binding</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>qt_dotgraph</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>rosgraph_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rosnode</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosservice</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>humanoid_league_msgs</run_depend>


  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>

