<?xml version="1.0"?>
<package>
  <name>humanoid_league_rviz_marker</name>
  <version>0.0.0</version>
  <description>Shows RoboCup Soccer specific objects in RViz. More information in the README.</description>

  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>humanoid_league_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>humanoid_league_msgs</run_depend>

  <export>

  </export>
</package>