<?xml version="1.0"?>
<package>
  <name>humanoid_league_rviz_marker</name>
  <version>0.0.0</version>
  <description>Shows RoboCup Soccer specific objects in RViz. More information in the README.</description>

  <maintainer email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</maintainer>
  <author email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</author>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>humanoid_league_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>humanoid_league_msgs</run_depend>

  <export>
    <bitbots_documentation>
      <status>unknown</status>
      <language>python</language>
    </bitbots_documentation>
  </export>
</package>