<?xml version="1.0"?>
<package format="2">
  <name>humanoid_league_rviz_marker</name>
  <version>0.0.0</version>
  <description>Shows RoboCup Soccer specific objects in RViz. More information in the README.</description>

  <maintainer email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</maintainer>
  <author email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</author>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>humanoid_league_msgs</exec_depend>
  
  <export>
    <bitbots_documentation>
      <status>broken</status>
      <language>python3</language>
    </bitbots_documentation>
  </export>
</package>